[tool.poetry]
name = "repl_python3_MusicBotV3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
youtube-dl = "^2020.7.28"
async-timeout = "^3.0.1"
PyNaCl = "^1.4.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
